style.css
/* ... */
.form{
 width:100%;
 margin:0;
 padding:0;
}

.inline-form{
  display: flex;
  flex-direction:row;
  flex-wrap: wrap;
  align-items: center;
  align-content:center ;
  justify-content:space-between;
  width:100%;
  margin:0;
  padding:0;
}


.fill-input{
  display:block;
  margin:0;
  padding:0; 
  font-family: arboria, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size:1.2em;
  color:white;

}

#join-container label{
  display:block;
  margin:10px 0px;
  padding:0;
  color:#4D6C6A;
  font-family: arboria, sans-serif;
  font-weight: 500;
  font-style: normal;
}

#join-container input, #join-container select{
  display:block;
  margin:0;
  padding:0;
  width:100%;
  background-color:rgba(255, 255, 255, 0.452);
  height: 40px;
  border-radius: 5px;
  position: relative;
  font-family: arboria, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size:1em;
  border:1px solid #979797;
}


#join-container input:focus, #join-container select:focus{
  background-color:#E3E3E3;
}


#join-container .button-center{
  margin:2em auto;
}

@media (min-width: 1280px) {
.join-form{
  width:40%;
}
.fill-input{
  min-width:45%;
}
}

@media (max-width: 1279px) {
.join-form{
  width:80%;
}
.fill-input{
  width:90%;
  margin:auto;
}
}

/*////------Join:start--------/////*/






/*////------about-us:start--------/////*/
/*--about-us-page-start--*/
.blog-edu{
  margin:10px;
  background-color: white;  
  border:0px solid white;
  color: #212121;
  padding: 0.3em 1em;
  text-align: center;
  font-family: all-round-gothic,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1em;
  border-radius: 28px;
  cursor:pointer;
  transition-property: all;
  transition-duration:0.3s;
  transition-timing-function: ease;
}

.blog-edu:hover{
  background-color:#04BFB3;
  color:white;
}

.about-hero-image h1{
  font-family: all-round-gothic, sans-serif;
  font-weight: 600;
  font-style: normal;
  color:white;
  text-align:center;
  margin:auto;
  padding:120px 0 30px 0;
}

.about-hero-image{
  background-image:linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)),url("images/home-page/1MW-shot.png");
    /* Set a specific height */
  width: auto;
  height:auto;
  /* Position and center the image to scale nicely on all screens */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.blog-container{
  display:flex;
  flex-wrap:nowrap;
  justify-content:center;
  align-items:flex-start;
  align-content:center;
}

.photo-container{
  display: flex;
  align-content:flex-end;
  padding:0;
  margin:0;
}
.photo-container img{
  margin:0;
  padding:0;
}

.description{
  color:white;
  display: flex;
  flex-direction:column;
  flex-wrap:nowrap;
  justify-content:center;
  align-items:center;
  align-content:center;
  height:300px;
}

.description p{
  text-align:center;
  font-family: arboria, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size:1em;
  color:white;
  margin:0;
  padding:5px 30px;
}

.blog-h2{
  font-family: arboria, sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size:28px;
  color:white;
  text-align:center;
}

@media (min-width: 925px) {
  .blog-container{
    margin:80px auto;
    width:70%;
    flex-direction:row;
  }

  .photo-container img{
    min-width:300px;
    height:300px;
    border-radius:0 5px 5px 0;
  }

  .description{
    background-color:#345151;
    min-width:330px;
    border-radius:5px 0 0 5px;
  }
}

/*--another style start--*/

@media (max-width: 924px) {
  .blog-container{
  background-color:#345151; 
  height:auto;
  width:80%;
  margin:10em auto;
  display:flex;
  flex-direction:column;
  flex-wrap:nowrap;
  justify-content:center;
  align-items:flex-start;
  align-content:flex-end;
  border-radius:5px;
  }
  .photo-container{
    padding:0;
    order:-1;
  }

  .photo-container img{
  width:100%;
  height:auto;
  border-radius:5px 5px 0 0;
  }
  .description{
  background-color:#345151; 
  width:80%;
  margin:auto;
  color:white;
  display: flex;
  flex-direction:column;
  flex-wrap:nowrap;
  justify-content:center;
  align-items:center;
  align-content:space-around;
  min-height:350px;
}
  .description p{
  text-align:center;
  font-family: arboria, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size:1em;
  color:white;
  margin:0;
  padding:10px 20px;
  }

}


/*--another style end--*/

/*////------about-us:end--------/////*/


/*////------donate:start--------/////*/
#donate-container{
  background-image:linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)),url("images/home-page/glacier-retreat.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
  width:auto;
  height:auto;
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  justify-content:space-evenly;
  align-items: center ;
  align-content:center ;
  padding-bottom:3em;
}

.form-container{
  height:auto;
  width:100%;
  padding:0;
  padding-bottom:150px;
  margin:auto;
}

.donate-form:not(#plan){
  display: flex;
  flex-direction:column;
  height:auto;
  max-width:50%;
  padding:30px 40px 40px 30px;
  margin:auto;
  background:white;
  border-radius:5px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}


.step-title{
  margin:auto;
  color:white;
  line-height: 65px;
  text-align: center;
  font-family: arboria, sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size:1.8em;
}

.form-container #contact,.form-container .acc-details{
  padding:0 10px;
  margin:auto;
  margin-bottom:20px;
  min-width:50%;
  text-align:center;
  font-family: arboria, sans-serif;
  font-weight: 400;
  font-style: normal;
  color:white;
  font-size:1em;
}

.form-container #plan-p{
  padding:0 10px;
  margin:auto;
  margin-bottom:20px;
  min-width:80%;
  text-align:center;
  font-family: arboria, sans-serif;
  font-weight: 400;
  font-style: normal;
  color:white;
  font-size:1em;
}

.acc-details{
  color:white;
  font-size:0.9em;
}
/* ... */

